infra/kubernetes/overlays/kind/web-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiveblot-web
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
